Fixed header spacing issues.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -44,6 +44,11 @@ header {
   width: 100%;
   height: 100%; }
 
+/* About */
+.sky {
+  height: 400px;
+  background: linear-gradient(to bottom, #394072, #2b80ee); }
+
 html {
   font-size: 112.5%;
   font-family: 'Inter UI', sans-serif; }
